Restructuring class placement, addressed some code quality recommendations.